--- a/Resources/Prototypes/Traits/speech.yml
+++ b/Resources/Prototypes/Traits/speech.yml
@@ -121,3 +121,12 @@
   cost: 2
   components:
   - type: FrontalLisp
+
+- type: trait
+  id: Undereducated
+  name: trait-Undereducated-name
+  description: trait-Undereducated-desc
+  category: SpeechTraits
+  cost: 2
+  components:
+  - type: Undereducated
